--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -169,6 +169,13 @@
         <item>255</item>
     </integer-array>
 
+    <!-- Minimum screen brightness setting allowed by the power manager.
+     The user is forbidden from setting the brightness below this level. -->
+    <integer name="config_screenBrightnessSettingMinimum">25</integer>
+    
+    <!-- Minimum screen brightness allowed by the power manager. -->
+    <integer name="config_screenBrightnessDim">25</integer>
+    
     <bool translatable="false" name="skip_restoring_network_selection">true</bool>
     
     <!-- Boolean indicating whether the wifi chipset has dual frequency band support -->
@@ -178,13 +185,9 @@
     <bool translatable="false" name="config_wifi_background_scan_support">true</bool>
 
     <bool name="config_ui_enableFadingMarquee">false</bool>
-
-    <!-- Package name providing network location support. -->
-<!--    <string name="config_networkLocationProviderPackageName" translatable="false">com.google.android.location</string>
--->
-    <!-- Package name providing geocoder API support. -->
-<!--    <string name="config_geocodeProviderPackageName" translatable="false">com.google.android.location</string>
--->
+    
+     <bool name="config_sf_limitedAlpha">false</bool>
+     
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
     <bool name="config_intrusiveNotificationLed">true</bool>
     <!-- Boolean indicating whether Softap requires reloading AP firmware -->
